# osprey

./: .flake8  .gitignore  CHANGELOG.md  README.md  claw.service  osprey.service  pyproject.toml
.github/: FUNDING.yml
claw/: __init__.py  __main__.py  applet.py  gi_require_version.py  google_cloud_speech.py  indicator.py  microphone.py
claw/app/: indicator.py
claw/voice/: context.py
osprey/: __main__.py  config.py  control.py  conversions.py  digits.py  engine.py  evdev.py  homophones.py  keys.py  open.py  pyautogui.py  vocab.py  voice.py
osprey/app/: engine.py  gi_require_version.py  google_cloud_speech.py  indicator.py  kaldi.py  microphone.py  vad.py
osprey/engine/: __init__.py  engine.py
osprey/voice/: __init__.py  context.py  context_group.py  key.py  press.py  rep.py  str.py
