[tool.poetry]
name = "osprey"
version = "0.1.0"
description = ""
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

appdirs = "^1.4"
evdev = "^1.2"
google-cloud-speech = "^1.2"
pyaudio = "^0.2.11"
pygobject = "^3.34"
webrtcvad = "^2.0.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
osprey = 'osprey:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
